<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.davo.quizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif"
            android:text="@string/instructions_textView"
            android:textColor="@color/textColor"
            android:textSize="24sp"/>

        <TextView
            style="@style/questionTextViewStyle"
            android:text="@string/question1_textView"/>

        <CheckBox
            android:text="@string/question1_option1_text"
            style="@style/optionStyle"/>

        <CheckBox
            android:text="@string/question1_option2_text"
            style="@style/optionStyle"/>

        <CheckBox
            android:text="@string/question1_option3_text"
            style="@style/optionStyle"/>

        <CheckBox
            android:text="@string/question1_option4_text"
            style="@style/optionStyle"/>

        <View
            style="@style/grayLineStyle"/>

        <TextView
            style="@style/questionTextViewStyle"
            android:text="@string/question2_textView"/>

        <RadioButton
            android:id="@+id/radio_q2o1"
            android:onClick="onQ2RadioButtonClicked"
            android:text="@string/question2_option1_text"
            style="@style/optionStyle"/>

        <RadioButton
            android:id="@+id/radio_q2o2"
            android:onClick="onQ2RadioButtonClicked"
            android:text="@string/question2_option2_text"
            style="@style/optionStyle"/>

        <RadioButton
            android:id="@+id/radio_q2o3"
            android:onClick="onQ2RadioButtonClicked"
            android:text="@string/question2_option3_text"
            style="@style/optionStyle"/>

        <RadioButton
            android:id="@+id/radio_q2o4"
            android:onClick="onQ2RadioButtonClicked"
            android:text="@string/question2_option4_text"
            style="@style/optionStyle"/>

        <View
            style="@style/grayLineStyle"/>

        <TextView
            style="@style/questionTextViewStyle"
            android:text="@string/question3_textView"/>

        <RadioButton
            android:id="@+id/radio_q3o1"
            android:onClick="onQ3RadioButtonClicked"
            android:text="@string/question3_option1_text"
            style="@style/optionStyle"/>

        <RadioButton
            android:id="@+id/radio_q3o2"
            android:onClick="onQ3RadioButtonClicked"
            android:text="@string/question3_option2_text"
            style="@style/optionStyle"/>

        <RadioButton
            android:id="@+id/radio_q3o3"
            android:onClick="onQ3RadioButtonClicked"
            android:text="@string/question3_option3_text"
            style="@style/optionStyle"/>

        <RadioButton
            android:id="@+id/radio_q3o4"
            android:onClick="onQ3RadioButtonClicked"
            android:text="@string/question3_option4_text"
            style="@style/optionStyle"/>

        <View
            style="@style/grayLineStyle"/>

        <TextView
            style="@style/questionTextViewStyle"
            android:text="@string/question4_textView"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="submitAnswers"
            android:text="@string/button_text"/>
    </LinearLayout>
</ScrollView>